// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History page renders a different battery mode label when changing mode 1`] = `
Object {
  "component": <BrowserRouter
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Provider
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <Storage
          location={
            Object {
              "pathname": "/",
            }
          }
        >
          <section
            className="section storage has-bar full-min-height pr-0 pl-0"
          >
            <MainNavBar
              location={
                Object {
                  "pathname": "/",
                }
              }
            >
              <nav
                aria-label="main navigation"
                className="main-nav-bar navbar"
                role="navigation"
              >
                <div
                  className="header-container columns is-mobile"
                >
                  <div
                    className="column"
                  >
                    <Link
                      className="link"
                      to={
                        Object {
                          "pathname": "/menu",
                          "state": Object {
                            "from": "/",
                          },
                        }
                      }
                    >
                      <a
                        className="link"
                        href="/menu"
                        onClick={[Function]}
                      >
                        <ForwardRef(SvgHamburgerMenu)>
                          <svg>
                            hamburger-menu.svg
                          </svg>
                        </ForwardRef(SvgHamburgerMenu)>
                      </a>
                    </Link>
                  </div>
                  <div
                    className="column is-two-thirds header is-flex"
                  >
                    <h1
                      className="navbar-header"
                    >
                      home
                    </h1>
                  </div>
                  <div
                    className="column actions"
                  >
                    <Link
                      to={
                        Object {
                          "pathname": "/notifications",
                          "state": Object {
                            "from": "/",
                          },
                        }
                      }
                    >
                      <a
                        href="/notifications"
                        onClick={[Function]}
                      >
                        <div
                          className="alerts-bell pr-5"
                        >
                          <ForwardRef(SvgAlerts)>
                            <svg>
                              alerts.svg
                            </svg>
                          </ForwardRef(SvgAlerts)>
                          <div
                            className="is-hidden"
                          />
                        </div>
                      </a>
                    </Link>
                    <Link
                      to={
                        Object {
                          "pathname": "/profile",
                          "state": Object {
                            "from": "/",
                          },
                        }
                      }
                    >
                      <a
                        href="/profile"
                        onClick={[Function]}
                      >
                        <div
                          className="pl-5"
                        >
                          <ForwardRef(SvgProfile)>
                            <svg>
                              profile.svg
                            </svg>
                          </ForwardRef(SvgProfile)>
                        </div>
                      </a>
                    </Link>
                  </div>
                </div>
              </nav>
            </MainNavBar>
            <SubNavBar
              tabs={
                Array [
                  Object {
                    "title": "TAB_TITLE_HOME",
                    "url": "/",
                  },
                  Object {
                    "active": true,
                    "title": "TAB_TITLE_STORAGE",
                    "url": "/storage",
                  },
                  Object {
                    "title": "TAB_TITLE_HISTORY",
                    "url": "/history",
                  },
                ]
              }
            >
              <nav
                aria-label="secondary navigation"
                className="sub-nav-bar navbar"
                role="navigation"
              >
                <Tabs
                  tabs={
                    Array [
                      Object {
                        "title": "TAB_TITLE_HOME",
                        "url": "/",
                      },
                      Object {
                        "active": true,
                        "title": "TAB_TITLE_STORAGE",
                        "url": "/storage",
                      },
                      Object {
                        "title": "TAB_TITLE_HISTORY",
                        "url": "/history",
                      },
                    ]
                  }
                >
                  <div
                    className="tabs container is-centered"
                  >
                    <ul>
                      <li
                        className=""
                        key="TAB_TITLE_HOME"
                      >
                        <Link
                          to="/"
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            TAB_TITLE_HOME
                          </a>
                        </Link>
                      </li>
                      <li
                        className="is-active"
                        key="TAB_TITLE_STORAGE"
                      >
                        <Link
                          to="/storage"
                        >
                          <a
                            href="/storage"
                            onClick={[Function]}
                          >
                            TAB_TITLE_STORAGE
                          </a>
                        </Link>
                      </li>
                      <li
                        className=""
                        key="TAB_TITLE_HISTORY"
                      >
                        <Link
                          to="/history"
                        >
                          <a
                            href="/history"
                            onClick={[Function]}
                          >
                            TAB_TITLE_HISTORY
                          </a>
                        </Link>
                      </li>
                    </ul>
                  </div>
                </Tabs>
              </nav>
            </SubNavBar>
            <div
              className="sub-section container display-battery-storage mt-20 pb-30 is-flex"
            >
              <BatteryMode
                mode="COST_SAVINGS"
              >
                <div
                  className="battery-mode"
                >
                  <h2
                    className="title is-7"
                  >
                    BATTERY_MODE
                    :
                  </h2>
                  <Link
                    to={
                      Object {
                        "pathname": "/menu/battery-settings",
                        "state": Object {
                          "from": "/storage",
                        },
                      }
                    }
                  >
                    <a
                      href="/menu/battery-settings"
                      onClick={[Function]}
                    >
                      <h3
                        className="subtitle is-7"
                      >
                        COST_SAVINGS
                         
                        <ForwardRef(SvgChevron)>
                          <svg>
                            chevron.svg
                          </svg>
                        </ForwardRef(SvgChevron)>
                      </h3>
                    </a>
                  </Link>
                </div>
              </BatteryMode>
              <Battery
                className="mt-20"
                energyPercetage={100}
                kwCharged="13.00"
              >
                <div
                  className="battery-icon mt-20"
                >
                  <svg
                    fill="none"
                    height="372"
                    viewBox="0 0 219 372"
                    width="219"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      className="battery-display"
                      d="M 29 3 C 29 3.23857 31.23858 1 34 1 H 183.761 C 183.761 1 186 3.23858 186 6 V 365 C 186 367.866 182.866 371 179 371 H 36 C 32.134 371 29 367.866 29 364 V 0 Z"
                      fill="black"
                      opacity="0.4"
                    />
                    <path
                      d="M174.315 371.521H42.479C35.9799 371.521 32.9492 369.929 31.5348 368.592C30.0195 367.16 30.0195 365.727 30.0195 365.696V4.6461C29.9858 4.51877 29.9185 3.85027 30.592 3.08628C31.6022 1.90846 34.3635 0.507812 41.7045 0.507812H175.157C182.498 0.507812 185.259 1.90846 186.269 3.08628C186.943 3.85027 186.842 4.5506 186.842 4.6461V365.664C186.842 365.727 186.842 367.128 185.326 368.561C183.878 369.898 180.814 371.521 174.315 371.521ZM41.6709 0.794309C34.4982 0.794309 31.8042 2.13129 30.8277 3.24545C30.1879 3.97761 30.3226 4.5506 30.3226 4.58243V4.61426V365.664C30.3226 365.664 30.3562 367.064 31.8379 368.433C33.2186 369.707 36.1819 371.203 42.479 371.203H174.348C180.645 371.203 183.609 369.675 184.989 368.433C186.471 367.064 186.505 365.696 186.505 365.664V4.61426V4.58243C186.505 4.5506 186.639 3.97761 186 3.24545C185.023 2.13129 182.363 0.794309 175.157 0.794309H41.6709Z"
                      fill="black"
                    />
                    <path
                      d="M174.317 372H42.4811C37.1269 372 33.3217 370.95 31.1665 368.912C29.5165 367.321 29.4828 365.729 29.4828 365.665V4.67945C29.4491 4.42478 29.4154 3.62896 30.1563 2.76947C31.739 0.923156 35.6116 0 41.673 0H175.125C181.186 0 185.059 0.923156 186.642 2.76947C187.382 3.62896 187.349 4.42478 187.315 4.67945V365.665C187.315 365.729 187.315 367.321 185.631 368.912C183.476 370.95 179.671 372 174.317 372ZM41.673 1.27332C34.3993 1.27332 32.0421 2.67397 31.2675 3.50163C30.7624 4.04279 30.8298 4.48845 30.8298 4.52028V4.58395V4.61578V365.665C30.8298 365.856 31.0655 370.727 42.4811 370.727H174.35C185.766 370.727 185.968 365.856 186.002 365.665V4.55211V4.48845C186.002 4.48845 186.069 4.04279 185.564 3.50163C184.79 2.67397 182.432 1.27332 175.159 1.27332H41.673Z"
                      fill="black"
                    />
                    <g
                      opacity="0.4"
                    >
                      <path
                        d="M118.151 104.702H99.5963C97.037 104.702 94.9492 102.728 94.9492 100.309V63.0961C94.9492 60.6768 97.037 58.7031 99.5963 58.7031H118.151C120.71 58.7031 122.798 60.6768 122.798 63.0961V100.309C122.798 102.728 120.71 104.702 118.151 104.702ZM99.5963 59.308C97.4075 59.308 95.6227 60.9951 95.6227 63.0642V100.277C95.6227 102.346 97.4075 104.033 99.5963 104.033H118.151C120.34 104.033 122.125 102.346 122.125 100.277V63.0961C122.125 61.0269 120.34 59.3398 118.151 59.3398H99.5963V59.308Z"
                        fill="black"
                      />
                    </g>
                    <g
                      opacity="0.5"
                    >
                      <path
                        d="M86.6398 47.3861C86.4278 46.9915 86.1554 46.779 85.671 46.779C85.1866 46.779 84.7325 47.1433 84.7325 47.6593C84.7325 48.145 85.2169 48.3575 85.6104 48.5397L85.9737 48.6914C86.7003 49.0254 87.3058 49.3593 87.3058 50.27C87.3058 51.2414 86.5187 52.0003 85.5499 52.0003C84.6416 52.0003 83.9756 51.4235 83.8242 50.5432L84.4297 50.361C84.5205 50.9378 84.9444 51.3931 85.5499 51.3931C86.1554 51.3931 86.7003 50.9378 86.7003 50.3003C86.7003 49.6325 86.1856 49.42 85.671 49.1771L85.3379 49.0254C84.6719 48.7218 84.127 48.3879 84.127 47.5986C84.127 46.7183 84.8536 46.1719 85.7012 46.1719C86.337 46.1719 86.8517 46.4754 87.1544 47.0522L86.6398 47.3861Z"
                        fill="black"
                      />
                      <path
                        d="M90.0615 49.6291C90.0615 50.0541 90.0616 50.5095 90.3037 50.8737C90.5459 51.2077 91.0303 51.4202 91.4239 51.4202C91.8175 51.4202 92.2716 51.238 92.5138 50.9345C92.8165 50.5702 92.7863 50.0845 92.7863 49.6595V46.3203H93.422V49.8113C93.422 50.4184 93.3918 50.9041 92.9376 51.3594C92.5441 51.7844 91.9991 51.9969 91.4239 51.9969C90.9092 51.9969 90.3643 51.7844 89.9707 51.4202C89.4863 50.9648 89.4258 50.4488 89.4258 49.8113V46.3203H90.0615V49.6291Z"
                        fill="black"
                      />
                      <path
                        d="M95.5703 46.0781L99.9298 50.6619V46.321H100.566V52.1797L96.2061 47.6263V51.9369H95.5703V46.0781Z"
                        fill="black"
                      />
                      <path
                        d="M103.504 46.9001H103.746C104.473 46.9001 105.199 46.9608 105.199 47.8715C105.199 48.6607 104.624 48.8732 103.928 48.8732H103.504V46.9001ZM103.504 49.45H103.958C104.412 49.45 104.897 49.3893 105.29 49.0857C105.623 48.7822 105.835 48.3268 105.835 47.8715C105.835 47.3858 105.623 46.9001 105.199 46.5965C104.806 46.3233 104.291 46.293 103.807 46.293H102.898V51.8785H103.534V49.45H103.504Z"
                        fill="black"
                      />
                      <path
                        d="M115.856 50.5122L117.672 46.0195L119.489 50.5122L120.942 46.3231H121.608L119.458 52.2122L117.642 47.7195L115.825 52.2122L113.676 46.3231H114.342L115.856 50.5122Z"
                        fill="black"
                      />
                      <path
                        d="M122.969 46.3203H125.875V46.8971H123.605V48.5667H125.815V49.1434H123.605V51.3291H125.875V51.9059H122.969V46.3203Z"
                        fill="black"
                      />
                      <path
                        d="M128.597 46.9001H128.778C129.535 46.9001 130.201 46.9912 130.201 47.9018C130.201 48.7822 129.505 48.9036 128.778 48.9036H128.597V46.9001ZM128.597 49.45H128.748L130.443 51.9089H131.2L129.414 49.3893C130.262 49.3286 130.807 48.7215 130.807 47.8411C130.807 46.5662 129.838 46.293 128.778 46.293H127.961V51.8785H128.597V49.45Z"
                        fill="black"
                      />
                      <path
                        d="M86.6398 47.3861C86.4278 46.9915 86.1554 46.779 85.671 46.779C85.1866 46.779 84.7325 47.1433 84.7325 47.6593C84.7325 48.145 85.2169 48.3575 85.6104 48.5397L85.9737 48.6914C86.7003 49.0254 87.3058 49.3593 87.3058 50.27C87.3058 51.2414 86.5187 52.0003 85.5499 52.0003C84.6416 52.0003 83.9756 51.4235 83.8242 50.5432L84.4297 50.361C84.5205 50.9378 84.9444 51.3931 85.5499 51.3931C86.1554 51.3931 86.7003 50.9378 86.7003 50.3003C86.7003 49.6325 86.1856 49.42 85.671 49.1771L85.3379 49.0254C84.6719 48.7218 84.127 48.3879 84.127 47.5986C84.127 46.7183 84.8536 46.1719 85.7012 46.1719C86.337 46.1719 86.8517 46.4754 87.1544 47.0522L86.6398 47.3861Z"
                        fill="black"
                      />
                      <path
                        d="M90.0615 49.6291C90.0615 50.0541 90.0616 50.5095 90.3037 50.8737C90.5459 51.2077 91.0303 51.4202 91.4239 51.4202C91.8175 51.4202 92.2716 51.238 92.5138 50.9345C92.8165 50.5702 92.7863 50.0845 92.7863 49.6595V46.3203H93.422V49.8113C93.422 50.4184 93.3918 50.9041 92.9376 51.3594C92.5441 51.7844 91.9991 51.9969 91.4239 51.9969C90.9092 51.9969 90.3643 51.7844 89.9707 51.4202C89.4863 50.9648 89.4258 50.4488 89.4258 49.8113V46.3203H90.0615V49.6291Z"
                        fill="black"
                      />
                      <path
                        d="M103.504 46.9001H103.746C104.473 46.9001 105.199 46.9608 105.199 47.8715C105.199 48.6607 104.624 48.8732 103.928 48.8732H103.504V46.9001ZM103.504 49.45H103.958C104.412 49.45 104.897 49.3893 105.29 49.0857C105.623 48.7822 105.835 48.3268 105.835 47.8715C105.835 47.3858 105.623 46.9001 105.199 46.5965C104.806 46.3233 104.291 46.293 103.807 46.293H102.898V51.8785H103.534V49.45H103.504Z"
                        fill="black"
                      />
                      <path
                        d="M115.856 50.5122L117.672 46.0195L119.489 50.5122L120.942 46.3231H121.608L119.458 52.2122L117.642 47.7195L115.825 52.2122L113.676 46.3231H114.342L115.856 50.5122Z"
                        fill="black"
                      />
                      <path
                        d="M122.969 46.3203H125.875V46.8971H123.605V48.5667H125.815V49.1434H123.605V51.3291H125.875V51.9059H122.969V46.3203Z"
                        fill="black"
                      />
                      <path
                        d="M128.597 46.9001H128.778C129.535 46.9001 130.201 46.9912 130.201 47.9018C130.201 48.7822 129.505 48.9036 128.778 48.9036H128.597V46.9001ZM128.597 49.45H128.748L130.443 51.9089H131.2L129.414 49.3893C130.262 49.3286 130.807 48.7215 130.807 47.8411C130.807 46.5662 129.838 46.293 128.778 46.293H127.961V51.8785H128.597V49.45Z"
                        fill="black"
                      />
                      <path
                        d="M112.856 49.1118C112.856 50.7511 111.554 51.9957 109.919 51.9957C108.314 51.9957 107.043 50.6904 107.043 49.1422C107.043 47.5637 108.314 46.2584 109.919 46.2584C111.554 46.228 112.856 47.4726 112.856 49.1118ZM107.679 49.1118C107.679 50.2957 108.617 51.3582 109.889 51.3582C111.191 51.3582 112.19 50.3868 112.19 49.1118C112.19 47.8065 111.191 46.8351 109.889 46.8351C108.617 46.8655 107.679 47.8976 107.679 49.1118Z"
                        fill="black"
                      />
                    </g>
                  </svg>
                  <div
                    className="energy-info is-flex"
                  >
                    <h2
                      className="title is-3"
                    >
                      0
                      %
                    </h2>
                    <span
                      className="is-uppercase"
                    >
                      CHARGED
                    </span>
                    <span>
                      (
                      13.00
                       kWh)
                    </span>
                  </div>
                </div>
              </Battery>
              <BatteryStatus
                className="mt-40"
                mode="POWERING_HOME"
              >
                <div
                  className="battery-status mt-40"
                >
                  <h2
                    className="title is-7"
                  >
                    BATTERY_STATUS
                    :
                  </h2>
                  <div
                    className="status-container is-flex"
                  >
                    <span
                      className="is-active mb-5"
                    >
                      POWERING_HOME
                    </span>
                  </div>
                </div>
              </BatteryStatus>
            </div>
            <div
              className="separator is-dotted is-gray mt-5 mb-5"
            />
            <div
              className="sub-section mt-40 mb-50"
            >
              <BackupAmount>
                <div
                  className="backup-amount pr-40 pl-40"
                >
                  <div
                    className="backup-amount-top"
                  >
                    <div
                      className="backup-amount-qty"
                    >
                      <h1
                        className="is-size-2 mb-10"
                      >
                        5
                      </h1>
                      <h1>
                        BACKUP_AMOUNT_UNIT
                      </h1>
                    </div>
                    <div
                      className="backup-amount-text"
                    >
                      <h1
                        className="is-uppercase"
                      >
                        BACKUP_AMOUNT_TEXT
                      </h1>
                    </div>
                  </div>
                </div>
              </BackupAmount>
            </div>
            <div
              className="separator"
            />
            <BatterySystemStatus
              internet={true}
              offgrid={true}
              warning={true}
            >
              <div
                className="battery-status is-flex"
              >
                <h1
                  className="is-uppercase battery-status-desc1 is-size-7"
                >
                  STORAGE SYSTEM INFO
                </h1>
                <div
                  className="mt-15 mb-15"
                />
                <div
                  className="battery-status-item"
                >
                  <div
                    className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
                  >
                    <ForwardRef(SvgInternet)>
                      <svg>
                        Internet.svg
                      </svg>
                    </ForwardRef(SvgInternet)>
                  </div>
                  <div
                    className="battery-status-item-text"
                  >
                    <h1
                      className="is-uppercase is-size-7 "
                    >
                      INTERNET
                      :
                    </h1>
                    <h1
                      className="is-uppercase is-size-7"
                    >
                      INTERNET_CONNECTED
                    </h1>
                  </div>
                </div>
                <div
                  className="battery-status-item"
                >
                  <div
                    className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
                  >
                    <ForwardRef(SvgOffGrid)>
                      <svg>
                        OffGrid.svg
                      </svg>
                    </ForwardRef(SvgOffGrid)>
                  </div>
                  <div
                    className="battery-status-item-text"
                  >
                    <h1
                      className="is-uppercase is-size-7"
                    >
                      BATTERY_GRID_MODE
                      :
                    </h1>
                    <h1
                      className="is-uppercase is-size-7"
                    >
                      BATTERY_MODE_OFFGRID
                    </h1>
                  </div>
                </div>
                <div
                  className="battery-status-item"
                >
                  <div
                    className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
                  >
                    <ForwardRef(SvgWarning)>
                      <svg>
                        Warning.svg
                      </svg>
                    </ForwardRef(SvgWarning)>
                  </div>
                  <div
                    className="battery-status-item-text"
                  >
                    <h1
                      className="is-uppercase is-size-7 battery-status-warning"
                    >
                      BATTERY_WARNING
                    </h1>
                  </div>
                </div>
                <div
                  className="mt-15 mb-15"
                />
              </div>
            </BatterySystemStatus>
            <div
              className="separator"
            />
            <div
              className="sub-section mt-40 mb-50"
            >
              <BatteryStats
                data={
                  Array [
                    Object {
                      "color": "primary",
                      "text": "8:26am",
                      "title": "Jul, 7/6/19",
                      "unit": "kWh",
                      "value": "5.7",
                      "when": "3h 21m",
                    },
                    Object {
                      "color": "primary",
                      "text": "2:54pm",
                      "title": "Jul, 7/23/19",
                      "unit": "kWh",
                      "value": "43.2",
                      "when": "16h 3m",
                    },
                    Object {
                      "color": "primary",
                      "text": "7:03am",
                      "title": "Aug, 8/11/19",
                      "unit": "kWh",
                      "value": "3.0",
                      "when": "4h 7m",
                    },
                    Object {
                      "color": "primary",
                      "text": "10:42pm",
                      "title": "Aug, 8/17/19",
                      "unit": "kWh",
                      "value": "23.2",
                      "when": "8h 32m",
                    },
                  ]
                }
                text="OUTAGE_POWER"
                title="OUTAGE_LIST"
              >
                <section>
                  <h6
                    className="is-uppercase is-size-7 has-text-centered"
                  >
                    OUTAGE_LIST
                  </h6>
                  <h6
                    className="is-uppercase has-text-weight-bold has-text-centered has-text-white"
                  >
                    OUTAGE_POWER
                  </h6>
                  <div
                    className="container mt-20"
                  >
                    <div
                      className="mb-10"
                      key="Jul, 7/6/19-0"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="8:26am"
                        title="Jul, 7/6/19"
                        unit="kWh"
                        value="5.7"
                        when="3h 21m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Jul, 7/6/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  8:26am
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  5.70
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                3h 21m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                    <div
                      className="mb-10"
                      key="Jul, 7/23/19-1"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="2:54pm"
                        title="Jul, 7/23/19"
                        unit="kWh"
                        value="43.2"
                        when="16h 3m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Jul, 7/23/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  2:54pm
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  43.20
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                16h 3m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                    <div
                      className="mb-10"
                      key="Aug, 8/11/19-2"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="7:03am"
                        title="Aug, 8/11/19"
                        unit="kWh"
                        value="3.0"
                        when="4h 7m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Aug, 8/11/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  7:03am
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  3.00
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                4h 7m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                    <div
                      className="mb-10"
                      key="Aug, 8/17/19-3"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="10:42pm"
                        title="Aug, 8/17/19"
                        unit="kWh"
                        value="23.2"
                        when="8h 32m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Aug, 8/17/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  10:42pm
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  23.20
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                8h 32m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                  </div>
                </section>
              </BatteryStats>
            </div>
            <div
              className="separator"
            />
            <div
              className="sub-section"
            >
              <SocialFooter
                invert={true}
              >
                <div
                  className="sp-social-share is-flex"
                >
                  <h3
                    className="white-text pb-20"
                  >
                    SOCIAL_FOOTER_TITLE
                  </h3>
                  <div
                    className="share-icons is-flex"
                  >
                    <a
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgFacebookIcon)>
                        <svg>
                          facebook-icon.svg
                        </svg>
                      </ForwardRef(SvgFacebookIcon)>
                    </a>
                    <a
                      className="pt-5"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgTwitterIcon)>
                        <svg>
                          twitter-icon.svg
                        </svg>
                      </ForwardRef(SvgTwitterIcon)>
                    </a>
                    <a
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgLinkedinIcon)>
                        <svg>
                          linkedin-icon.svg
                        </svg>
                      </ForwardRef(SvgLinkedinIcon)>
                    </a>
                    <a
                      className="pt-5"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgYoutubeIcon)>
                        <svg>
                          youtube-icon.svg
                        </svg>
                      </ForwardRef(SvgYoutubeIcon)>
                    </a>
                    <a
                      className="pt-3"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgInstagramIcon)>
                        <svg>
                          instagram-icon.svg
                        </svg>
                      </ForwardRef(SvgInstagramIcon)>
                    </a>
                  </div>
                </div>
              </SocialFooter>
            </div>
          </section>
        </Storage>
      </Provider>
    </Router>
  </BrowserRouter>,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;

exports[`History page renders without crashing 1`] = `
Object {
  "component": <BrowserRouter
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Provider
        store={
          Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
        }
      >
        <Storage
          location={
            Object {
              "pathname": "/",
            }
          }
        >
          <section
            className="section storage has-bar full-min-height pr-0 pl-0"
          >
            <MainNavBar
              location={
                Object {
                  "pathname": "/",
                }
              }
            >
              <nav
                aria-label="main navigation"
                className="main-nav-bar navbar"
                role="navigation"
              >
                <div
                  className="header-container columns is-mobile"
                >
                  <div
                    className="column"
                  >
                    <Link
                      className="link"
                      to={
                        Object {
                          "pathname": "/menu",
                          "state": Object {
                            "from": "/",
                          },
                        }
                      }
                    >
                      <a
                        className="link"
                        href="/menu"
                        onClick={[Function]}
                      >
                        <ForwardRef(SvgHamburgerMenu)>
                          <svg>
                            hamburger-menu.svg
                          </svg>
                        </ForwardRef(SvgHamburgerMenu)>
                      </a>
                    </Link>
                  </div>
                  <div
                    className="column is-two-thirds header is-flex"
                  >
                    <h1
                      className="navbar-header"
                    >
                      home
                    </h1>
                  </div>
                  <div
                    className="column actions"
                  >
                    <Link
                      to={
                        Object {
                          "pathname": "/notifications",
                          "state": Object {
                            "from": "/",
                          },
                        }
                      }
                    >
                      <a
                        href="/notifications"
                        onClick={[Function]}
                      >
                        <div
                          className="alerts-bell pr-5"
                        >
                          <ForwardRef(SvgAlerts)>
                            <svg>
                              alerts.svg
                            </svg>
                          </ForwardRef(SvgAlerts)>
                          <div
                            className="is-hidden"
                          />
                        </div>
                      </a>
                    </Link>
                    <Link
                      to={
                        Object {
                          "pathname": "/profile",
                          "state": Object {
                            "from": "/",
                          },
                        }
                      }
                    >
                      <a
                        href="/profile"
                        onClick={[Function]}
                      >
                        <div
                          className="pl-5"
                        >
                          <ForwardRef(SvgProfile)>
                            <svg>
                              profile.svg
                            </svg>
                          </ForwardRef(SvgProfile)>
                        </div>
                      </a>
                    </Link>
                  </div>
                </div>
              </nav>
            </MainNavBar>
            <SubNavBar
              tabs={
                Array [
                  Object {
                    "title": "TAB_TITLE_HOME",
                    "url": "/",
                  },
                  Object {
                    "active": true,
                    "title": "TAB_TITLE_STORAGE",
                    "url": "/storage",
                  },
                  Object {
                    "title": "TAB_TITLE_HISTORY",
                    "url": "/history",
                  },
                ]
              }
            >
              <nav
                aria-label="secondary navigation"
                className="sub-nav-bar navbar"
                role="navigation"
              >
                <Tabs
                  tabs={
                    Array [
                      Object {
                        "title": "TAB_TITLE_HOME",
                        "url": "/",
                      },
                      Object {
                        "active": true,
                        "title": "TAB_TITLE_STORAGE",
                        "url": "/storage",
                      },
                      Object {
                        "title": "TAB_TITLE_HISTORY",
                        "url": "/history",
                      },
                    ]
                  }
                >
                  <div
                    className="tabs container is-centered"
                  >
                    <ul>
                      <li
                        className=""
                        key="TAB_TITLE_HOME"
                      >
                        <Link
                          to="/"
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            TAB_TITLE_HOME
                          </a>
                        </Link>
                      </li>
                      <li
                        className="is-active"
                        key="TAB_TITLE_STORAGE"
                      >
                        <Link
                          to="/storage"
                        >
                          <a
                            href="/storage"
                            onClick={[Function]}
                          >
                            TAB_TITLE_STORAGE
                          </a>
                        </Link>
                      </li>
                      <li
                        className=""
                        key="TAB_TITLE_HISTORY"
                      >
                        <Link
                          to="/history"
                        >
                          <a
                            href="/history"
                            onClick={[Function]}
                          >
                            TAB_TITLE_HISTORY
                          </a>
                        </Link>
                      </li>
                    </ul>
                  </div>
                </Tabs>
              </nav>
            </SubNavBar>
            <div
              className="sub-section container display-battery-storage mt-20 pb-30 is-flex"
            >
              <BatteryMode
                mode="BACKUP_ONLY"
              >
                <div
                  className="battery-mode"
                >
                  <h2
                    className="title is-7"
                  >
                    BATTERY_MODE
                    :
                  </h2>
                  <Link
                    to={
                      Object {
                        "pathname": "/menu/battery-settings",
                        "state": Object {
                          "from": "/storage",
                        },
                      }
                    }
                  >
                    <a
                      href="/menu/battery-settings"
                      onClick={[Function]}
                    >
                      <h3
                        className="subtitle is-7"
                      >
                        BACKUP_ONLY
                         
                        <ForwardRef(SvgChevron)>
                          <svg>
                            chevron.svg
                          </svg>
                        </ForwardRef(SvgChevron)>
                      </h3>
                    </a>
                  </Link>
                </div>
              </BatteryMode>
              <Battery
                className="mt-20"
                energyPercetage={100}
                kwCharged="13.00"
              >
                <div
                  className="battery-icon mt-20"
                >
                  <svg
                    fill="none"
                    height="372"
                    viewBox="0 0 219 372"
                    width="219"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      className="battery-display"
                      d="M 29 3 C 29 3.23857 31.23858 1 34 1 H 183.761 C 183.761 1 186 3.23858 186 6 V 365 C 186 367.866 182.866 371 179 371 H 36 C 32.134 371 29 367.866 29 364 V 0 Z"
                      fill="black"
                      opacity="0.4"
                    />
                    <path
                      d="M174.315 371.521H42.479C35.9799 371.521 32.9492 369.929 31.5348 368.592C30.0195 367.16 30.0195 365.727 30.0195 365.696V4.6461C29.9858 4.51877 29.9185 3.85027 30.592 3.08628C31.6022 1.90846 34.3635 0.507812 41.7045 0.507812H175.157C182.498 0.507812 185.259 1.90846 186.269 3.08628C186.943 3.85027 186.842 4.5506 186.842 4.6461V365.664C186.842 365.727 186.842 367.128 185.326 368.561C183.878 369.898 180.814 371.521 174.315 371.521ZM41.6709 0.794309C34.4982 0.794309 31.8042 2.13129 30.8277 3.24545C30.1879 3.97761 30.3226 4.5506 30.3226 4.58243V4.61426V365.664C30.3226 365.664 30.3562 367.064 31.8379 368.433C33.2186 369.707 36.1819 371.203 42.479 371.203H174.348C180.645 371.203 183.609 369.675 184.989 368.433C186.471 367.064 186.505 365.696 186.505 365.664V4.61426V4.58243C186.505 4.5506 186.639 3.97761 186 3.24545C185.023 2.13129 182.363 0.794309 175.157 0.794309H41.6709Z"
                      fill="black"
                    />
                    <path
                      d="M174.317 372H42.4811C37.1269 372 33.3217 370.95 31.1665 368.912C29.5165 367.321 29.4828 365.729 29.4828 365.665V4.67945C29.4491 4.42478 29.4154 3.62896 30.1563 2.76947C31.739 0.923156 35.6116 0 41.673 0H175.125C181.186 0 185.059 0.923156 186.642 2.76947C187.382 3.62896 187.349 4.42478 187.315 4.67945V365.665C187.315 365.729 187.315 367.321 185.631 368.912C183.476 370.95 179.671 372 174.317 372ZM41.673 1.27332C34.3993 1.27332 32.0421 2.67397 31.2675 3.50163C30.7624 4.04279 30.8298 4.48845 30.8298 4.52028V4.58395V4.61578V365.665C30.8298 365.856 31.0655 370.727 42.4811 370.727H174.35C185.766 370.727 185.968 365.856 186.002 365.665V4.55211V4.48845C186.002 4.48845 186.069 4.04279 185.564 3.50163C184.79 2.67397 182.432 1.27332 175.159 1.27332H41.673Z"
                      fill="black"
                    />
                    <g
                      opacity="0.4"
                    >
                      <path
                        d="M118.151 104.702H99.5963C97.037 104.702 94.9492 102.728 94.9492 100.309V63.0961C94.9492 60.6768 97.037 58.7031 99.5963 58.7031H118.151C120.71 58.7031 122.798 60.6768 122.798 63.0961V100.309C122.798 102.728 120.71 104.702 118.151 104.702ZM99.5963 59.308C97.4075 59.308 95.6227 60.9951 95.6227 63.0642V100.277C95.6227 102.346 97.4075 104.033 99.5963 104.033H118.151C120.34 104.033 122.125 102.346 122.125 100.277V63.0961C122.125 61.0269 120.34 59.3398 118.151 59.3398H99.5963V59.308Z"
                        fill="black"
                      />
                    </g>
                    <g
                      opacity="0.5"
                    >
                      <path
                        d="M86.6398 47.3861C86.4278 46.9915 86.1554 46.779 85.671 46.779C85.1866 46.779 84.7325 47.1433 84.7325 47.6593C84.7325 48.145 85.2169 48.3575 85.6104 48.5397L85.9737 48.6914C86.7003 49.0254 87.3058 49.3593 87.3058 50.27C87.3058 51.2414 86.5187 52.0003 85.5499 52.0003C84.6416 52.0003 83.9756 51.4235 83.8242 50.5432L84.4297 50.361C84.5205 50.9378 84.9444 51.3931 85.5499 51.3931C86.1554 51.3931 86.7003 50.9378 86.7003 50.3003C86.7003 49.6325 86.1856 49.42 85.671 49.1771L85.3379 49.0254C84.6719 48.7218 84.127 48.3879 84.127 47.5986C84.127 46.7183 84.8536 46.1719 85.7012 46.1719C86.337 46.1719 86.8517 46.4754 87.1544 47.0522L86.6398 47.3861Z"
                        fill="black"
                      />
                      <path
                        d="M90.0615 49.6291C90.0615 50.0541 90.0616 50.5095 90.3037 50.8737C90.5459 51.2077 91.0303 51.4202 91.4239 51.4202C91.8175 51.4202 92.2716 51.238 92.5138 50.9345C92.8165 50.5702 92.7863 50.0845 92.7863 49.6595V46.3203H93.422V49.8113C93.422 50.4184 93.3918 50.9041 92.9376 51.3594C92.5441 51.7844 91.9991 51.9969 91.4239 51.9969C90.9092 51.9969 90.3643 51.7844 89.9707 51.4202C89.4863 50.9648 89.4258 50.4488 89.4258 49.8113V46.3203H90.0615V49.6291Z"
                        fill="black"
                      />
                      <path
                        d="M95.5703 46.0781L99.9298 50.6619V46.321H100.566V52.1797L96.2061 47.6263V51.9369H95.5703V46.0781Z"
                        fill="black"
                      />
                      <path
                        d="M103.504 46.9001H103.746C104.473 46.9001 105.199 46.9608 105.199 47.8715C105.199 48.6607 104.624 48.8732 103.928 48.8732H103.504V46.9001ZM103.504 49.45H103.958C104.412 49.45 104.897 49.3893 105.29 49.0857C105.623 48.7822 105.835 48.3268 105.835 47.8715C105.835 47.3858 105.623 46.9001 105.199 46.5965C104.806 46.3233 104.291 46.293 103.807 46.293H102.898V51.8785H103.534V49.45H103.504Z"
                        fill="black"
                      />
                      <path
                        d="M115.856 50.5122L117.672 46.0195L119.489 50.5122L120.942 46.3231H121.608L119.458 52.2122L117.642 47.7195L115.825 52.2122L113.676 46.3231H114.342L115.856 50.5122Z"
                        fill="black"
                      />
                      <path
                        d="M122.969 46.3203H125.875V46.8971H123.605V48.5667H125.815V49.1434H123.605V51.3291H125.875V51.9059H122.969V46.3203Z"
                        fill="black"
                      />
                      <path
                        d="M128.597 46.9001H128.778C129.535 46.9001 130.201 46.9912 130.201 47.9018C130.201 48.7822 129.505 48.9036 128.778 48.9036H128.597V46.9001ZM128.597 49.45H128.748L130.443 51.9089H131.2L129.414 49.3893C130.262 49.3286 130.807 48.7215 130.807 47.8411C130.807 46.5662 129.838 46.293 128.778 46.293H127.961V51.8785H128.597V49.45Z"
                        fill="black"
                      />
                      <path
                        d="M86.6398 47.3861C86.4278 46.9915 86.1554 46.779 85.671 46.779C85.1866 46.779 84.7325 47.1433 84.7325 47.6593C84.7325 48.145 85.2169 48.3575 85.6104 48.5397L85.9737 48.6914C86.7003 49.0254 87.3058 49.3593 87.3058 50.27C87.3058 51.2414 86.5187 52.0003 85.5499 52.0003C84.6416 52.0003 83.9756 51.4235 83.8242 50.5432L84.4297 50.361C84.5205 50.9378 84.9444 51.3931 85.5499 51.3931C86.1554 51.3931 86.7003 50.9378 86.7003 50.3003C86.7003 49.6325 86.1856 49.42 85.671 49.1771L85.3379 49.0254C84.6719 48.7218 84.127 48.3879 84.127 47.5986C84.127 46.7183 84.8536 46.1719 85.7012 46.1719C86.337 46.1719 86.8517 46.4754 87.1544 47.0522L86.6398 47.3861Z"
                        fill="black"
                      />
                      <path
                        d="M90.0615 49.6291C90.0615 50.0541 90.0616 50.5095 90.3037 50.8737C90.5459 51.2077 91.0303 51.4202 91.4239 51.4202C91.8175 51.4202 92.2716 51.238 92.5138 50.9345C92.8165 50.5702 92.7863 50.0845 92.7863 49.6595V46.3203H93.422V49.8113C93.422 50.4184 93.3918 50.9041 92.9376 51.3594C92.5441 51.7844 91.9991 51.9969 91.4239 51.9969C90.9092 51.9969 90.3643 51.7844 89.9707 51.4202C89.4863 50.9648 89.4258 50.4488 89.4258 49.8113V46.3203H90.0615V49.6291Z"
                        fill="black"
                      />
                      <path
                        d="M103.504 46.9001H103.746C104.473 46.9001 105.199 46.9608 105.199 47.8715C105.199 48.6607 104.624 48.8732 103.928 48.8732H103.504V46.9001ZM103.504 49.45H103.958C104.412 49.45 104.897 49.3893 105.29 49.0857C105.623 48.7822 105.835 48.3268 105.835 47.8715C105.835 47.3858 105.623 46.9001 105.199 46.5965C104.806 46.3233 104.291 46.293 103.807 46.293H102.898V51.8785H103.534V49.45H103.504Z"
                        fill="black"
                      />
                      <path
                        d="M115.856 50.5122L117.672 46.0195L119.489 50.5122L120.942 46.3231H121.608L119.458 52.2122L117.642 47.7195L115.825 52.2122L113.676 46.3231H114.342L115.856 50.5122Z"
                        fill="black"
                      />
                      <path
                        d="M122.969 46.3203H125.875V46.8971H123.605V48.5667H125.815V49.1434H123.605V51.3291H125.875V51.9059H122.969V46.3203Z"
                        fill="black"
                      />
                      <path
                        d="M128.597 46.9001H128.778C129.535 46.9001 130.201 46.9912 130.201 47.9018C130.201 48.7822 129.505 48.9036 128.778 48.9036H128.597V46.9001ZM128.597 49.45H128.748L130.443 51.9089H131.2L129.414 49.3893C130.262 49.3286 130.807 48.7215 130.807 47.8411C130.807 46.5662 129.838 46.293 128.778 46.293H127.961V51.8785H128.597V49.45Z"
                        fill="black"
                      />
                      <path
                        d="M112.856 49.1118C112.856 50.7511 111.554 51.9957 109.919 51.9957C108.314 51.9957 107.043 50.6904 107.043 49.1422C107.043 47.5637 108.314 46.2584 109.919 46.2584C111.554 46.228 112.856 47.4726 112.856 49.1118ZM107.679 49.1118C107.679 50.2957 108.617 51.3582 109.889 51.3582C111.191 51.3582 112.19 50.3868 112.19 49.1118C112.19 47.8065 111.191 46.8351 109.889 46.8351C108.617 46.8655 107.679 47.8976 107.679 49.1118Z"
                        fill="black"
                      />
                    </g>
                  </svg>
                  <div
                    className="energy-info is-flex"
                  >
                    <h2
                      className="title is-3"
                    >
                      0
                      %
                    </h2>
                    <span
                      className="is-uppercase"
                    >
                      CHARGED
                    </span>
                    <span>
                      (
                      13.00
                       kWh)
                    </span>
                  </div>
                </div>
              </Battery>
              <BatteryStatus
                className="mt-40"
                mode="POWERING_HOME"
              >
                <div
                  className="battery-status mt-40"
                >
                  <h2
                    className="title is-7"
                  >
                    BATTERY_STATUS
                    :
                  </h2>
                  <div
                    className="status-container is-flex"
                  >
                    <span
                      className="is-active mb-5"
                    >
                      POWERING_HOME
                    </span>
                  </div>
                </div>
              </BatteryStatus>
            </div>
            <div
              className="separator is-dotted is-gray mt-5 mb-5"
            />
            <div
              className="sub-section mt-40 mb-50"
            >
              <BackupAmount>
                <div
                  className="backup-amount pr-40 pl-40"
                >
                  <div
                    className="backup-amount-top"
                  >
                    <div
                      className="backup-amount-qty"
                    >
                      <h1
                        className="is-size-2 mb-10"
                      >
                        5
                      </h1>
                      <h1>
                        BACKUP_AMOUNT_UNIT
                      </h1>
                    </div>
                    <div
                      className="backup-amount-text"
                    >
                      <h1
                        className="is-uppercase"
                      >
                        BACKUP_AMOUNT_TEXT
                      </h1>
                    </div>
                  </div>
                </div>
              </BackupAmount>
            </div>
            <div
              className="separator"
            />
            <BatterySystemStatus
              internet={true}
              offgrid={true}
              warning={true}
            >
              <div
                className="battery-status is-flex"
              >
                <h1
                  className="is-uppercase battery-status-desc1 is-size-7"
                >
                  STORAGE SYSTEM INFO
                </h1>
                <div
                  className="mt-15 mb-15"
                />
                <div
                  className="battery-status-item"
                >
                  <div
                    className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
                  >
                    <ForwardRef(SvgInternet)>
                      <svg>
                        Internet.svg
                      </svg>
                    </ForwardRef(SvgInternet)>
                  </div>
                  <div
                    className="battery-status-item-text"
                  >
                    <h1
                      className="is-uppercase is-size-7 "
                    >
                      INTERNET
                      :
                    </h1>
                    <h1
                      className="is-uppercase is-size-7"
                    >
                      INTERNET_CONNECTED
                    </h1>
                  </div>
                </div>
                <div
                  className="battery-status-item"
                >
                  <div
                    className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
                  >
                    <ForwardRef(SvgOffGrid)>
                      <svg>
                        OffGrid.svg
                      </svg>
                    </ForwardRef(SvgOffGrid)>
                  </div>
                  <div
                    className="battery-status-item-text"
                  >
                    <h1
                      className="is-uppercase is-size-7"
                    >
                      BATTERY_GRID_MODE
                      :
                    </h1>
                    <h1
                      className="is-uppercase is-size-7"
                    >
                      BATTERY_MODE_OFFGRID
                    </h1>
                  </div>
                </div>
                <div
                  className="battery-status-item"
                >
                  <div
                    className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
                  >
                    <ForwardRef(SvgWarning)>
                      <svg>
                        Warning.svg
                      </svg>
                    </ForwardRef(SvgWarning)>
                  </div>
                  <div
                    className="battery-status-item-text"
                  >
                    <h1
                      className="is-uppercase is-size-7 battery-status-warning"
                    >
                      BATTERY_WARNING
                    </h1>
                  </div>
                </div>
                <div
                  className="mt-15 mb-15"
                />
              </div>
            </BatterySystemStatus>
            <div
              className="separator"
            />
            <div
              className="sub-section mt-40 mb-50"
            >
              <BatteryStats
                data={
                  Array [
                    Object {
                      "color": "primary",
                      "text": "8:26am",
                      "title": "Jul, 7/6/19",
                      "unit": "kWh",
                      "value": "5.7",
                      "when": "3h 21m",
                    },
                    Object {
                      "color": "primary",
                      "text": "2:54pm",
                      "title": "Jul, 7/23/19",
                      "unit": "kWh",
                      "value": "43.2",
                      "when": "16h 3m",
                    },
                    Object {
                      "color": "primary",
                      "text": "7:03am",
                      "title": "Aug, 8/11/19",
                      "unit": "kWh",
                      "value": "3.0",
                      "when": "4h 7m",
                    },
                    Object {
                      "color": "primary",
                      "text": "10:42pm",
                      "title": "Aug, 8/17/19",
                      "unit": "kWh",
                      "value": "23.2",
                      "when": "8h 32m",
                    },
                  ]
                }
                text="OUTAGE_POWER"
                title="OUTAGE_LIST"
              >
                <section>
                  <h6
                    className="is-uppercase is-size-7 has-text-centered"
                  >
                    OUTAGE_LIST
                  </h6>
                  <h6
                    className="is-uppercase has-text-weight-bold has-text-centered has-text-white"
                  >
                    OUTAGE_POWER
                  </h6>
                  <div
                    className="container mt-20"
                  >
                    <div
                      className="mb-10"
                      key="Jul, 7/6/19-0"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="8:26am"
                        title="Jul, 7/6/19"
                        unit="kWh"
                        value="5.7"
                        when="3h 21m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Jul, 7/6/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  8:26am
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  5.70
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                3h 21m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                    <div
                      className="mb-10"
                      key="Jul, 7/23/19-1"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="2:54pm"
                        title="Jul, 7/23/19"
                        unit="kWh"
                        value="43.2"
                        when="16h 3m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Jul, 7/23/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  2:54pm
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  43.20
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                16h 3m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                    <div
                      className="mb-10"
                      key="Aug, 8/11/19-2"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="7:03am"
                        title="Aug, 8/11/19"
                        unit="kWh"
                        value="3.0"
                        when="4h 7m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Aug, 8/11/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  7:03am
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  3.00
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                4h 7m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                    <div
                      className="mb-10"
                      key="Aug, 8/17/19-3"
                    >
                      <EnergyInfo
                        color="primary"
                        high={true}
                        icon={<PoweringIcon />}
                        text="10:42pm"
                        title="Aug, 8/17/19"
                        unit="kWh"
                        value="23.2"
                        when="8h 32m"
                      >
                        <section
                          className="energy-info pl-20 pt-10 pr-10 pb-15 has-background-dark"
                        >
                          <article
                            className="columns is-flex"
                          >
                            <div
                              className="column"
                            >
                              <span
                                className="is-size-7 has-text-white"
                              >
                                <strong
                                  className="has-text-white mr-5"
                                >
                                  Aug, 8/17/19
                                </strong>
                                <span
                                  className="has-text-primary has-text-weight-bold"
                                >
                                  10:42pm
                                </span>
                              </span>
                              <div
                                className="info mt-20 has-text-primary is-size-4"
                              >
                                <span
                                  className="is-size-3 mr-5 has-text-weight-light"
                                >
                                  23.20
                                </span>
                                <span
                                  className="has-text-primary is-size-4"
                                >
                                  kWh
                                </span>
                              </div>
                            </div>
                            <div
                              className="column has-text-centered is-flex level tile is-vertical pr-0"
                            >
                              <div
                                className="has-text-centered is-size-7"
                              >
                                8h 32m
                              </div>
                              <div>
                                <PoweringIcon>
                                  <div
                                    className="is-flex level pr-10"
                                  >
                                    <ForwardRef(SvgBattery)>
                                      <svg>
                                        Battery.svg
                                      </svg>
                                    </ForwardRef(SvgBattery)>
                                    <div
                                      className="ml-10 mr-10"
                                    >
                                      <ForwardRef(SvgArrow)>
                                        <svg>
                                          Arrow.svg
                                        </svg>
                                      </ForwardRef(SvgArrow)>
                                    </div>
                                    <ForwardRef(SvgHomeGray)>
                                      <svg>
                                        HomeGray.svg
                                      </svg>
                                    </ForwardRef(SvgHomeGray)>
                                  </div>
                                </PoweringIcon>
                              </div>
                            </div>
                          </article>
                        </section>
                      </EnergyInfo>
                    </div>
                  </div>
                </section>
              </BatteryStats>
            </div>
            <div
              className="separator"
            />
            <div
              className="sub-section"
            >
              <SocialFooter
                invert={true}
              >
                <div
                  className="sp-social-share is-flex"
                >
                  <h3
                    className="white-text pb-20"
                  >
                    SOCIAL_FOOTER_TITLE
                  </h3>
                  <div
                    className="share-icons is-flex"
                  >
                    <a
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgFacebookIcon)>
                        <svg>
                          facebook-icon.svg
                        </svg>
                      </ForwardRef(SvgFacebookIcon)>
                    </a>
                    <a
                      className="pt-5"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgTwitterIcon)>
                        <svg>
                          twitter-icon.svg
                        </svg>
                      </ForwardRef(SvgTwitterIcon)>
                    </a>
                    <a
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgLinkedinIcon)>
                        <svg>
                          linkedin-icon.svg
                        </svg>
                      </ForwardRef(SvgLinkedinIcon)>
                    </a>
                    <a
                      className="pt-5"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgYoutubeIcon)>
                        <svg>
                          youtube-icon.svg
                        </svg>
                      </ForwardRef(SvgYoutubeIcon)>
                    </a>
                    <a
                      className="pt-3"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <ForwardRef(SvgInstagramIcon)>
                        <svg>
                          instagram-icon.svg
                        </svg>
                      </ForwardRef(SvgInstagramIcon)>
                    </a>
                  </div>
                </div>
              </SocialFooter>
            </div>
          </section>
        </Storage>
      </Provider>
    </Router>
  </BrowserRouter>,
  "store": Object {
    "clearActions": [Function],
    "dispatch": [Function],
    "getActions": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
}
`;
